<?xml version="1.0"?>
<package>
  <name>capabilities</name>
  <version>0.1.0</version>
  <description>
    Package which implements capabilities, including code to parse capability interface specs, to parse capability provider specs, and implement the capability server.
  </description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/capabilities</url> -->

  <author email="william@osrfoundation.org">William Woodall</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>